# machine-learning-aqi-project

./: README.md  pyproject.toml  requirements.txt  train_model.py
api/: main.py
data/: fetch_data.py  generate_dataset.py  lahore_aqi_dataset.csv
frontend/: app.py
models/: label_encoder.pkl  lgbm_classifier.pkl  lgbm_regressor.pkl  model_meta.json  xgb_regressor.pkl
