[project]
name = "aqi-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "fastapi>=0.100",
    "joblib>=1.3",
    "lightgbm>=4.0",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pandas>=2.0",
    "pydantic>=2.0",
    "requests>=2.31",
    "scikit-learn>=1.3",
    "seaborn>=0.12",
    "shap>=0.44",
    "streamlit>=1.28",
    "uvicorn>=0.23",
    "xgboost>=2.0",
]
